# ai-Sudoku-Solver

./: README.md  pyproject.toml
ai_sudoku_solver/: __init__.py
tests/: test_ai_sudoku_solver.py
